loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:4: error: not found: value levebrosse
    leveBrosse();gauche();avance();droite();levebrosse()
                                            ^