loopfor.LoopStairs.scala.code
for (x<- 1 to 14){
  baisseBrosse();avance()
  if (estFaceMur()){
    leveBrosse();gauche();avance();droite();levebrosse()
  }
}